# dist-clang

./: BUILD.gn  README.md
src/base/: file_utils_posix.cc
src/client/: clang_command.cc
src/daemon/: emitter.cc
tools/clang/: BUILD.gn
