executable("clang") {
  sources = [
    "main.cc",
  ]

  deps += [
    "//src/base:base",
    "//src/base:logging",
    "//src/client",
    "//src/client:configuration",
  ]
}

copy("clang++") {
  deps = [ ":clang" ]
  sources = ["$root_out_dir/clang$exe_prefix"]
  outputs = ["$root_out_dir/clang++$exe_prefix"]
}

copy("clang-cl") {
  deps = [ ":clang" ]
  sources = ["$root_out_dir/clang$exe_prefix"]
  outputs = ["$root_out_dir/clang-cl$exe_prefix"]
}
